k8s-configs/cluster-tools/monitoring/prometheus/ingress.yaml
# This defines the ingress for grafana.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
  labels:
    app: grafana
spec:
  tls:
  - hosts:
    - monitoring-dev.ping-demo.com
  rules:
  - host: monitoring-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to the grafana console
        - path: /
          backend:
            serviceName: grafana
            servicePort: 3000

---

# This defines the ingress for prometheus.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx-private
  labels:
    app: prometheus
spec:
  tls:
  - hosts:
    - prometheus-dev.ping-demo.com
  rules:
  - host: prometheus-dev.ping-demo.com
    http:
      paths:
        # This rule gives external access to prometheus
        - path: /
          backend:
            serviceName: prometheus
            servicePort: 9090
